--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script src="https://kit.fontawesome.com/12f52938e0.js" crossorigin="anonymous"></script>
 
     <title>Kasa</title>
   </head>
